# rust-descriptor-wallet

./: .gitignore  Cargo.toml  LICENSE  README.md  wallet-mutiny-soft.json  wallet-regtest-local.json  wallet-signet-soft.json  wallet.json
apps/wallet_cli/: Cargo.toml
apps/wallet_cli/docs/: coin-control.md  command-reference.md  overview.md  transaction-flows.md
apps/wallet_cli/src/: cli.rs  main.rs
apps/wallet_cli/src/commands/: mod.rs  runtime.rs  wallet.rs
apps/wallet_desktop/: Cargo.toml
apps/wallet_desktop/src/: main.rs
crates/test_support/: Cargo.toml
crates/test_support/docs/: overview.md  test-architecture.md  transaction-scenarios.md
crates/test_support/src/: bitcoind.rs  lib.rs  paths.rs  regtest.rs  rpc.rs  wallet.rs
crates/wallet_api/: Cargo.toml
crates/wallet_api/docs/: architecture.md  dto-boundary.md  error-model.md  overview.md  service-flows.md
crates/wallet_api/src/: api.rs  dto.rs  error.rs  factory.rs  lib.rs  model.rs
crates/wallet_api/src/broadcaster/: esplora.rs  mod.rs
crates/wallet_api/src/service/: inspect.rs  mod.rs  psbt.rs  registry.rs  wallet.rs
crates/wallet_api/src/services/: inspect.rs  markers.rs  mod.rs  psbt.rs  registry.rs  runtime.rs  send.rs  status.rs  wallet.rs
crates/wallet_api/tests/: regtest_flow.rs
crates/wallet_api/tests/support/: mod.rs
crates/wallet_core/: Cargo.toml
crates/wallet_core/docs/: coin-selection.md  fee-model.md  invariants.md  overview.md  psbt-flows.md  transaction-model.md
crates/wallet_core/src/: config.rs  core.rs  error.rs  lib.rs  model.rs  service.rs  types.rs
crates/wallet_core/src/service/: broadcast.rs  common_outpoint.rs  common_selection.rs  common_test_util.rs  common_tx.rs  lifecycle.rs  mod.rs  psbt.rs  psbt_bump.rs  psbt_coin_control.rs  psbt_coin_selector.rs  psbt_common.rs  psbt_consolidation.rs  psbt_cpfp.rs  psbt_create.rs  psbt_publish.rs  psbt_rbf.rs  psbt_sign.rs  test_support.rs  txs.rs  utxos.rs
crates/wallet_core/tests/: bump_flow.rs
crates/wallet_storage/: Cargo.toml
crates/wallet_storage/docs/: overview.md  schema.md
crates/wallet_storage/migrations/: 0001_init.sql
crates/wallet_storage/src/: db.rs  error.rs  lib.rs  models.rs  repository.rs
crates/wallet_sync/: Cargo.toml
crates/wallet_sync/docs/: backend-model.md  overview.md  sync-flow.md
crates/wallet_sync/src/: broadcast.rs  error.rs  esplora_broadcast.rs  esplora_sync.rs  lib.rs  model.rs  service.rs
crates/wallet_sync/src/backend/: mod.rs
crates/wallet_sync/src/backend/core_rpc/: broadcast.rs  classify.rs  mod.rs
crates/wallet_sync/src/backend/electrum/: sync.rs
crates/wallet_sync/src/backend/esplora/: broadcast.rs  classify.rs  mod.rs  sync.rs
crates/wallet_sync/src/backend/mock/: broadcast.rs
docs/: tauri_ui_kickoff_prompt.md
infra/: .env.regtest
infra/docs/: overview.md  regtest-setup.md  scripts.md
infra/regtest/: README.md
infra/regtest/bitcoin/: bitcoin.conf
infra/regtest/electrs/: electrs.toml
infra/regtest/scripts/: fund.sh  mine.sh  reset.sh  start.sh  stop.sh
