[package]
name = "wallet_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
wallet_api = { path = "../../crates/wallet_api" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true

tracing-subscriber.workspace = true