[package]
name = "wallet_api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
wallet_core={path="../wallet_core"}
wallet_sync={path="../wallet_sync"}
wallet_storage={path="../wallet_storage"}
tokio.workspace = true
sqlx = "0.8.6"
serde_json.workspace = true
serde.workspace = true