[package]
name = "wallet_api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
wallet_core={path="../wallet_core"}
wallet_sync = { path = "../wallet_sync", features = ["electrum"] }
wallet_storage={path="../wallet_storage"}
tokio.workspace = true
serde.workspace = true
bitcoin.workspace = true
tracing.workspace = true

[dev-dependencies]
test_support = { path = "../test_support" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test.workspace = true
anyhow.workspace = true