[package]
name = "wallet_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
bdk_wallet.workspace = true
bdk_file_store.workspace = true
bitcoin.workspace = true
tracing.workspace = true
bdk_chain.workspace = true