[package]
name = "wallet_storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
dirs.workspace = true
bitcoin.workspace = true
tracing.workspace = true

