[package]
name = "wallet_sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
bdk_esplora.workspace = true
bdk_wallet.workspace = true
wallet_core={path="../wallet_core"}
tracing.workspace = true
bdk_chain.workspace = true